# fast_calib_core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md
cmake/: fast_calib_coreConfig.cmake.in
examples/: CMakeLists.txt  basic_calibration.cpp  calibrate.cpp  calibrate_from_files.cpp
include/: fast_calib_core.hpp
include/fast_calib_core/: calibration.hpp  config_parser.hpp  lidar_detector.hpp  qr_detector.hpp  types.hpp
scripts/: bag_to_pcd.py
test/: CMakeLists.txt  test_calibration.cpp  test_detectors.cpp  test_multi_scene_standalone.cpp  test_types.cpp
